# llm-finetuning

./: .gitignore  Makefile  collator.py  config.py  convert.py  data.py  data_args.py  hyperopt_args.py  lora_config.py  merge_adapters.py  merge_instruct_dataset.py  model.py  model_args.py  patch_llama_flash_attn.py  prepare_data_clm.py  preprocess.py  prompt_format.py  pyproject.toml  run_clm.py  setup.cfg  tokenizer.py  train.py  trainer.py
instruct-tuning/: config.py  data_args.py  hyperopt.py  hyperopt_args.py  inference-testing.ipynb  lora_config.py  merge_adapters.py  model_args.py  preprocess.py  prompt_templates.py  train.py  trainer.py
src/llm_finetuning/: collator.py  convert_pt_to_st_tf_flax.py  merge_adapters.py  merge_dutch_datasets.py  prepare_data_clm.py  preprocess.py  prompt_format.py  run_chat_modeling.py  run_clm.py
